--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@ body {
     background-color: white;
 
 }
+
+.dropButton {
+    margin: 0 auto;
+    font-size: 20px;
+    font-family: 'Indie Flower', cursive;
+}
+
 table {
     font-size: 50px;
     margin: 0 auto;
