--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0 auto;
     font-size: 20px;
     font-family: 'Indie Flower', cursive;
+    padding: 0 0 0 200px;
 }
 
 table {
@@ -14,15 +15,17 @@ table {
     margin: 0 auto;
     border-collapse: collapse;
     font-family: 'Indie Flower', cursive;
+    border: 2px black;
 }
 
 td {
     height: 80px;
     width: 80px;
     padding-top: 10px;
-    border: 1px solid #989898;
+    
     vertical-align: middle;
     text-align: center;
     cursor: pointer;
-    
+    border-radius: 50px;
+
 }
