--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,73 @@
 h1 {
     font-family: 'Nosifer', cursive;
     color: whitesmoke;
-    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0;
+    border: 0;
+    font-size: 35px;
+    text-align: center;
+    border-collapse: collapse;
+}
+.gameMessage {
+    font-family: 'Nosifer', cursive;
+    color: white;   
+    text-align: center;    
+
+    }
+h3 {
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+    font-size: 15px;
+    text-align: center;
 }
 
 body {
-    background-color: rgb(41, 76, 189);
+    background-color: rgb(92, 7, 100);    
+}
+
+button {
+    margin: 14px;
+    font-size: 13px;
+    padding: 0 10px 0 30px;
+    background-image: -webkit-linear-gradient(top, rgb(41, 3, 44), white);
+    background-image: -moz-linear-gradient(top, white, white);
+    background-image: -moz-linear-gradient(top, white, white);
+    background-image: linear-gradient(top, bottom, white, white);
+    border-radius: 50%;
+    padding: 5px 2px 2px 2px;
+    border: 0;
+    text-align: center;
+    vertical-align: bottom;
 
 }
-div{
-    
-}
-.dropButton {
-    margin: 0 auto;
-    font-size: 15px;
-    padding: 0 20px 0 300px;
-
+div {
+    text-align: center;
 }
 
 table {
-    font-size: 50px;
-    margin: 0 auto;
+    font-size: 24px;
+    margin: 0 ;
     border-radius: 5px;
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
     font-family: 'Indie Flower', cursive;
-    border: 2px black;
+    
+   margin: 0 auto;
+    
 }
 
 td {
-    height: 85px;
-    width: 85px;
-    padding-top: 1px;
-    
+    height: 60px;
+    width: 60px; 
+    border: 2px solid black;
     vertical-align: middle;
     text-align: center;
     cursor: pointer;
-    border-radius: 50px;
+    border-radius: 40px;
 
 }
-
+#reset {
+    margin: -80 0 250px 0;
+    /* vertical-align: bottom; */
+    border: 15px;
+}
