--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,47 @@
 h1 {
     font-family: 'Nosifer', cursive;
     color: whitesmoke;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     padding: 0;
     border: 0;
-    font-size: 35px;
+    font-size: 28px;
     text-align: center;
     border-collapse: collapse;
 }
 .gameMessage {
     font-family: 'Nosifer', cursive;
     color: white;   
-    text-align: center;    
-
+    text-align: left;  
+    margin: 0 0 0 5px; 
+    font-size: 15px; 
+    text-align: center;
     }
+
 h3 {
     font-family: 'Times New Roman', Times, serif;
     color: white;
-    font-size: 15px;
+    font-size: 12px;
     text-align: center;
+}
+
+.pageLines {
+    /* display: flex; */
+    
 }
 
 body {
-    background-color: rgb(92, 7, 100);    
+    background-color: rgb(77, 22, 88);    
 }
 
 button {
-    margin: 14px;
-    font-size: 13px;
-    padding: 0 10px 0 30px;
-    background-image: -webkit-linear-gradient(top, rgb(41, 3, 44), white);
-    background-image: -moz-linear-gradient(top, white, white);
-    background-image: -moz-linear-gradient(top, white, white);
-    background-image: linear-gradient(top, bottom, white, white);
-    border-radius: 50%;
-    padding: 5px 2px 2px 2px;
+    margin: 5px;
+    font-size: 10px;
+    text-decoration-color: white;
+    color: rgb(46, 3, 49);
+    border-radius: 75%;
     border: 0;
     text-align: center;
-    vertical-align: bottom;
-
 }
 div {
     text-align: center;
@@ -47,27 +49,27 @@ div {
 
 table {
     font-size: 24px;
-    margin: 0 ;
-    border-radius: 5px;
-    /* border-collapse: collapse; */
+    border-radius: 2px;
     font-family: 'Indie Flower', cursive;
-    
-   margin: 0 auto;
-    
+    margin: 0 auto;
 }
 
 td {
-    height: 60px;
-    width: 60px; 
-    border: 2px solid black;
+    height: 54px;
+    width: 54px; 
+    border: .5px solid black;
     vertical-align: middle;
     text-align: center;
     cursor: pointer;
     border-radius: 40px;
-
 }
+
 #reset {
-    margin: -80 0 250px 0;
-    /* vertical-align: bottom; */
+    margin: 5px 0px 10px 0px;
     border: 15px;
+    text-align: center; 
+}
+
+.gameSetMatch {
+    background-image: url(giphy.mp4)
 }
